Project_4-Kubernetes-Microservice-Phonebook/k8s-Solution_Files/resultserver-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: resultserver-deploy
  name: resultserver-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resultserver-deploy
  template:
    metadata:
      labels:
        app: resultserver-deploy
    spec:
      containers:
      - image: fikretdocker/phonebook_resultserver:v1
        name: resultserver
        ports:
          - containerPort: 80
        resources: {}
