Project_4-Kubernetes-Microservice-Phonebook/k8s-Solution_Files/webserver-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: webserver-deploy
  name: webserver-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webserver-deploy
  template:
    metadata:
      labels:
        app: webserver-deploy
    spec:
      containers:
      - image: fikretdocker/phonebook_webserver:v1
        name: webserver
        ports:
          - containerPort: 80
        resources: {}
