Project_4-Kubernetes-Microservice-Phonebook/k8s-Solution_Files/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mysql-deploy
  name: mysql-service
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: mysql-deploy
